[project]
name = "terminator-image-swapper"
version = "0.1.0"
description = "Change the background image on terminator as often as you like."
authors = [
    { name = "atomsforpeace", email = "1306402+AtomsForPeace@users.noreply.github.com" }
]
dependencies = [
    "configobj>=5.0.8",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
random_image = "terminator_image_swapper:random_image"
set_image_folder = "terminator_image_swapper:set_image_folder"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "mypy[mypyc]>=1.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/terminator_image_swapper"]
